--- a/Purloin/Purloin.vcxproj
+++ b/Purloin/Purloin.vcxproj
@@ -146,11 +146,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Purloin_Browser.cpp" />
+    <ClCompile Include="Purloin_Server.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="sqlite3.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Purloin_Browser.h" />
+    <ClInclude Include="Purloin_Debug.h" />
+    <ClInclude Include="Purloin_Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
