--- a/Purloin/Purloin.vcxproj
+++ b/Purloin/Purloin.vcxproj
@@ -146,7 +146,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Purloin_Browser.cpp" />
+    <ClCompile Include="Purloin_Utils.cpp" />
+    <ClCompile Include="Purloin_Chrome.cpp" />
     <ClCompile Include="Purloin_Server.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="sqlite3.c" />
@@ -155,9 +156,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Purloin_Browser.h" />
+    <ClInclude Include="Purloin_Chrome.h" />
     <ClInclude Include="Purloin_Debug.h" />
     <ClInclude Include="Purloin_Server.h" />
+    <ClInclude Include="Purloin_Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
