--- a/Purloin/Purloin.vcxproj
+++ b/Purloin/Purloin.vcxproj
@@ -112,7 +112,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Bcrypt.lib;Crypt32.lib;Ole32.lib;Shell32.lib;shlwapi.lib</AdditionalDependencies>
+      <AdditionalDependencies>Bcrypt.lib;Crypt32.lib;Ole32.lib;Shell32.lib;shlwapi.lib;User32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
