--- a/Purloin/Purloin.vcxproj.filters
+++ b/Purloin/Purloin.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="sqlite3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Purloin\Purloin_Chrome.cpp">
+    <ClCompile Include="Purloin\Purloin_Chromium.cpp">
       <Filter>Purloin</Filter>
     </ClCompile>
     <ClCompile Include="Purloin\Purloin_Server.cpp">
@@ -41,7 +41,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Purloin\includes\Purloin_Chrome.h">
+    <ClInclude Include="Purloin\includes\Purloin_Chromium.h">
       <Filter>Purloin\includes</Filter>
     </ClInclude>
     <ClInclude Include="Purloin\includes\Purloin_Debug.h">
